--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,22 @@
       width: 100%;
       height: 100%;
     }
+
+    #municipalities-map .path--selected {
+      opacity: 0.7;
+      stroke-width: 2;
+      stroke: #cccccc;
+    }
+
+    h1,h2 {
+      text-align: center;
+    }
   </style>
 </head>
 <body>
   <div class="app-root">
     <h1>Map Viewer Tools</h1>
+    <h2 id="city-name">Select a city</h2>
     <div class="map-container">
       <div id="municipalities-map"></div>
     </div>
@@ -37,11 +48,19 @@
   <script src="./map-tools/brazil-municipalities-tools.js">
   </script>
   <script>
-    const mapBuilder = new MunicipalitiesMapBuilder()
-    mapBuilder.renderMap('#municipalities-map')
-    mapBuilder.onPathClick = ({code, description}) => {
-      console.log('custom click code:', code)
+    let selectedCode = ''
+    const buildParameters = {
+      containerSelector: '#municipalities-map', 
+      selectedPathClass: 'path--selected',
+      onPathClick: ({code, description}) => {
+        console.log('custom click code:', code)
+        document.querySelector('#city-name').innerHTML = selectedCode == code? 'Select a city': description
+        selectedCode = code
+        mapBuilder.toogleSelectPath(code)
+      }, 
     }
+    const mapBuilder = new MunicipalitiesMapBuilder(buildParameters)
+    mapBuilder.render()
   </script>
 </body>
 </html>
