--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,8 @@
         }))
 
       fillTable(sampleData)
-      const colorMap = window.mapBuilder.colorizeCategories(sampleData)
+      const customPallete = ["#b30000", "#7c1158", "#4421af", "#1a53ff", "#0d88e6", "#00b7c7", "#5ad45a", "#8be04e", "#ebdc78"]
+      const colorMap = window.mapBuilder.colorizeCategories(sampleData, {customPallete})
       console.log('colorMap', colorMap)
       fillColorLabels(colorMap)
     }
