--- a/public/states.html
+++ b/public/states.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="app-root">
-    <h1>Map Viewer Tools</h1>
-    <h2 id="state-name">Select a state</h2>
-    <h3 id="state-details"></h3>
+    <h1 class="my-1 bb-1 py-1">Map Viewer Tools</h1>
+    <h2 class="my-1" id="state-name">Select a state</h2>
+    <h3 class="my-1" id="state-details"></h3>
     <div class="switch-view-button-container">
       <div class="switch-view-button" view-name="state-gdp">States GDP</div>
     </div>
@@ -37,57 +37,6 @@
     </div>
   </div>
 
-  <script src="index.js"></script>
-  <script src="./map-tools/brazil-states-tools.js"></script>
-  <script>
-    let currentData = [];
-    let onFillDetails = (details) => {}
-    let clearDetails = () => document.querySelector('#state-details').innerHTML = '';
-    (async () => {
-      let selectedCode = ''
-      const buildParameters = {
-        containerSelector: '#states-map', 
-        selectedPathClass: 'path--selected',
-        onPathClick: (code, details) => {
-          console.log('custom click code:', details)
-          selectedCode = selectedCode == code? '': code
-          mapBuilder.toogleSelectPath(code)
-          if(!selectedCode) {
-            document.querySelector('#state-name').innerHTML = 'Select a state'
-            clearDetails()
-            return
-          }
-          document.querySelector('#state-name').innerHTML = details.description
-          onFillDetails(details)
-        }, 
-      }
-
-      const mapBuilder = new StatesMapBuilder(buildParameters)
-      await mapBuilder.render()
-
-      window.mapBuilder = mapBuilder
-      await colorWithGdp()
-    })()
-
-    const colorWithGdp = async () => {
-      const sampleData = (await fetch('./sample-data/state-gdp-per-capita-2019.json')
-        .then(res => res.json()))
-        .map(d => ({
-          code: d.sigla_uf,
-          value: d.pib_per_capita_brl,
-          description: d.unidade_federativa
-        }))
-      
-      fillTable(sampleData)
-      window.mapBuilder.colorizeRdYlGn(sampleData)
-      clearDetails()
-      onFillDetails = ({value}) => document.querySelector('#state-details').innerHTML = `
-        <span>GDP: </span>
-        <span>${value}</span>
-      `
-    }
-
-    document.querySelector('.switch-view-button[view-name="state-gdp"]').addEventListener('click', colorWithGdp)
-  </script>
+  <script type="module" src="states.js"></script>
 </body>
 </html>
