Reimplement municipalities map with generic solution

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
   <div class="app-root">
-    <h1>Map Viewer Tools</h1>
-    <h2 id="city-name">Select a city</h2>
-    <h3 id="city-details"></h3>
+    <h1 class="my-1 bb-1 py-1">Map Viewer Tools</h1>
+    <h2 class="my-1" id="city-name">Select a city</h2>
+    <h3 class="my-1 details-header" id="city-details"></h3>
     <div class="switch-view-button-container">
       <div class="switch-view-button" view-name="gdp-per-capita">GDP per Capita(colorizeRdYlGn)</div>
       <div class="switch-view-button" view-name="municipalities-states">Municipalities/States(colorizeCategories)</div>
-      <div class="switch-view-button" view-name="state-gdp">States GDP</div>
     </div>
     <div class="map-container">
       <div id="municipalities-map"></div>
@@ -39,79 +38,6 @@
     </div>
   </div>
 
-  <script src="index.js"></script>
-  <script src="./map-tools/brazil-municipalities-tools.js"></script>
-  <script>
-    let currentData = [];
-    let onFillDetails = (details) => {}
-    let clearDetails = () => document.querySelector('#city-details').innerHTML = '';
-    (async () => {
-      let selectedCode = ''
-      const buildParameters = {
-        containerSelector: '#municipalities-map', 
-        selectedPathClass: 'path--selected',
-        onPathClick: (code, details) => {
-          console.log('custom click code:', code, 'description: ', details.description,'value:', details.value)
-          selectedCode = selectedCode == code? '': code
-          mapBuilder.toogleSelectPath(code)
-          if(!selectedCode) {
-            document.querySelector('#city-name').innerHTML = 'Select a city'
-            clearDetails()
-            return
-          }
-          document.querySelector('#city-name').innerHTML = details.description
-          onFillDetails(details)
-        }, 
-      }
-
-      const mapBuilder = new MunicipalitiesMapBuilder(buildParameters)
-      await mapBuilder.render()
-
-      window.mapBuilder = mapBuilder
-      await colorWithGdp()
-    })()
-
-    const colorWithGdp = async () => {
-      const sampleData = (await fetch('./sample-data/gdp-per-capita-2019.json')
-        .then(res => res.json()))
-        .map(d => ({
-          code: d.code,
-          value: d.gdpPerCapitaBrl2019
-        }))
-      
-      fillTable(sampleData)
-      window.mapBuilder.colorizeRdYlGn(sampleData)
-      clearColorLabels()
-      clearDetails()
-      onFillDetails = ({value}) => document.querySelector('#city-details').innerHTML = `
-        <span>GDP: </span>
-        <span>${value}</span>
-      `
-    }
-
-    const colorWithMunicipalitiesStates = async () => {
-      const sampleData = (await fetch('./sample-data/municipalities-codes.json')
-        .then(res => res.json()))
-        .map(d => ({
-          code: d.code,
-          value: d.stateAcronym
-        }))
-
-      fillTable(sampleData)
-      const customPallete = ["#b30000", "#7c1158", "#4421af", "#1a53ff", "#0d88e6", "#00b7c7", "#5ad45a", "#8be04e", "#ebdc78"]
-      const colorMap = window.mapBuilder.colorizeCategories(sampleData, {customPallete})
-      console.log('colorMap', colorMap)
-      fillColorLabels(colorMap)
-      clearDetails()
-      onFillDetails = ({value}) => document.querySelector('#city-details').innerHTML = `
-        <span>State: </span>
-        <span>${value}</span>
-      `
-    }
-
-    document.querySelector('.switch-view-button[view-name="gdp-per-capita"]').addEventListener('click', colorWithGdp)
-    document.querySelector('.switch-view-button[view-name="municipalities-states"]').addEventListener('click', colorWithMunicipalitiesStates)
-    document.querySelector('.switch-view-button[view-name="state-gdp"]').addEventListener('click', colorWithStatesGdp)
-  </script>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
