--- a/public/states.html
+++ b/public/states.html
@@ -10,7 +10,7 @@
   <div class="app-root">
     <h1 class="my-1 bb-1 py-1">Map Viewer Tools</h1>
     <h2 class="my-1" id="state-name">Select a state</h2>
-    <h3 class="my-1" id="state-details"></h3>
+    <h3 class="my-1 details-header" id="state-details"></h3>
     <div class="switch-view-button-container">
       <div class="switch-view-button" view-name="state-gdp">States GDP</div>
     </div>
